# d-blocks-core-plugin-hello

./: pyproject.toml
src/dblocks_plugin/: __init__.py
src/dblocks_plugin/example_plugin/: __init__.py  dbi_rewrite_statement.py  extractor.py  file_writer.py  hello.py
